package spengergasse.at.sj2425scherzerrabar.domain;

public enum BookGenre {
    MYSTERY, THRILLER, CRIME, ROMANCE, FANTASY, SCIENCE_FICTION,
    HISTORICAL_FICTION, CONTEMPORARY_FICTION, YOUNG_ADULT, BIOGRAPHY,
    AUTOBIOGRAPHY, MEMOIR, SELF_HELP, TRUE_CRIME, HISTORY, SCIENCE,
    TECHNOLOGY, PHILOSOPHY, RELIGION, SPIRITUALITY, GRAPHIC_NOVELS,
    COMICS, POETRY, HORROR
}